--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         <b><big>South China University of Technology </big></b><br>
         <b>Bachelor of engineering/Undegraduate student </b><br>
         <div class="core">
+            <span>Major : </span>Robotics Engineering  <br>
             <span>Current GPA : </span> 3.93/4.00<br>
             <span>Core curriculum : </span> Artificial Intelligence and its Applications, Machine Vision and Sensing System, Theory and Technology of Robotics, Mechatronics, Introduction to Engineering, Human-Machine Interaction, Industrial Robot and its Applications, Embedded Systems and Design, Data Structures and Algorithms
         </div>
