--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
             <h1>David Zhou</h1>
             <p>Shuai Zhou<br>周帅</p>
             <p><span>Mail : </span>davidzhou718@gmail.com</p>
-            <p><span>Github profile : </span><a href="https://github.com/ShuaiZhou302">https://github.com/ShuaiZhou302</a></p>
+            <p><a href=""\Resume (3).pdf"" download="Resume.pdf">CV</a>/<a href="https://github.com/ShuaiZhou302"><span>Github</span></a>/<a href="https://www.linkedin.com/in/%E5%B8%85-%E5%91%A8-61096428b/"><span>Linkedin</span></a></p>
+            
             <p>Hi! it's Shuai(david) here. Currently a sophomore student in South China university of Technology and majoring in robotics engineering. Interested in robotics (Multi-agent system & Motion Planning).</p>
         </div>
         <img class="profile-picture" src="David.jpg" alt="Profile Picture">
