--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <img class="profile-picture" src="David.jpg" alt="Profile Picture">
     </div>
 
-    <h2>Experience </h2>
+    <h2>Education </h2>
 
     <p>
         <b><big>2022 fall - 2026 spring</big></b><br>
