--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="core">
             <span>Major : </span>Robotics Engineering  <br>
             <span>Current GPA : </span> 3.93/4.00<br>
-            <span>Core curriculum : </span> Artificial Intelligence and its Applications, Machine Vision and Sensing System, Theory and Technology of Robotics, Mechatronics, Introduction to Engineering, Human-Machine Interaction, Industrial Robot and its Applications, Embedded Systems and Design, Data Structures and Algorithms
+            <span>Core curriculum : </span> Artificial Intelligence and its Applications, Machine Vision and Sensing System, Introduction to Engineering, Data Structures and Algorithms
         </div>
     </p>
 
@@ -94,12 +94,28 @@
         </div>
     </p>
 
-    <h2>Publication </h2>
-    <p>null :( still working on it! wish me good luck!</p>
+    <h2>Experience </h2>
 
-    <br> 
-    
-    <br>
+    <p>
+        <b><big>2024 April - Present</big></b><br>
+        <b><big>Research internship</big></b><br>
+        <b>Supervised by Prof.Zhongqiang Ren</b><br>
+        <div class="core">
+            <span>Insititution : </span> UM-SJTU Joint Institute, Shanghai Jiao Tong University<br>
+            <span>Details : </span> Research in Multi agent systems and Motion planning.Focusing on Multi Agent Path Finding(MAPF) problem.<br>
+        </div>
+        
+    </p>
+
+    <h2>Interest</h2>
+
+    <p>
+       Vinyl: I am a vinyl collector and I am a big fan of R&B and Soul music.<br>
+       Sports: I was trained to play badminton competition for six years and retired after 2017.Now a enthusiast.
+
+
+
+    </p>    
     <br>
     <address>
         Visit me at:<br>
